# SRCP

./: .gitignore  README.md
srcp2-final-public-main/: .gitattributes  README.md  build_comp_image.bash  cmd  srcp2_public.key  submit_tool.bash
srcp2-final-public-main/.gitlab/issue_templates/: admin_ticket.md  bug_ticket.md  dev_ticket.md  user_ticket.md
srcp2-final-public-main/cmp_workspace/: readme.txt  solution-entrypoint.bash
srcp2-final-public-main/cmp_workspace/devel/: .catkin  local_setup.sh  setup.sh
srcp2-final-public-main/cmp_workspace/devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  ObjectCount.h
srcp2-final-public-main/cmp_workspace/devel/lib/darknet_ros/: darknet_ros
srcp2-final-public-main/cmp_workspace/devel/lib/pkgconfig/: darknet_ros.pc  darknet_ros_msgs.pc  nasa_srcp_final.pc  small_excavator_controller.pc  small_excavator_moveit_config.pc  srcp2_basic_solution.pc  test_pkg.pc  yolo_test.pc
srcp2-final-public-main/cmp_workspace/devel/lib/srcp2_basic_solution/: hellobots-scout
srcp2-final-public-main/cmp_workspace/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
srcp2-final-public-main/cmp_workspace/install/lib/pkgconfig/: catkin_tools_prebuild.pc
srcp2-final-public-main/cmp_workspace/install/lib/srcp2_basic_solution/: hellobots-scout
srcp2-final-public-main/cmp_workspace/src/: README.md
srcp2-final-public-main/cmp_workspace/src/nasa-robot-controller/: CMakeLists.txt
srcp2-final-public-main/cmp_workspace/src/nasa-robot-controller2/: package.xml  readme.txt
srcp2-final-public-main/cmp_workspace/src/small_excavator_moveit_config/: .setup_assistant  CMakeLists.txt
srcp2-final-public-main/cmp_workspace/src/srcp2_basic_solution/: CMakeLists.txt
srcp2-final-public-main/cmp_workspace/src/test_pkg/: CMakeLists.txt
srcp2-final-public-main/config/: default_config.yaml
srcp2-final-public-main/docker/dockerfiles/: competitor.dockerfile  gazebo-ros.dockerfile  solution.dockerfile
srcp2-final-public-main/docker/dockerfiles/backup/: solution.dockerfile
srcp2-final-public-main/docker/scripts/: build_comp_image.bash  gpu_and_x.bash  run_comp_final  run_comp_final2  run_comp_final_tool  run_srcp2_final  srcp2_setup.bash
srcp2-final-public-main/docker/scripts/container/: config_solution.yaml  solution-entrypoint.bash
srcp2-final-public-main/ros_workspace/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
srcp2-final-public-main/ros_workspace/install/share/srcp2_gazebo/: package.xml
srcp2-final-public-main/ros_workspace/install/share/srcp2_gazebo/cmake/: srcp2_gazeboConfig.cmake
srcp2-final-public-main/ros_workspace/install/share/srcp2_gazebo/launch/integration_tests/: common_tools.test
srcp2-final-public-main/ros_workspace/install/share/srcp2_heightmap/: package.xml
srcp2-final-public-main/ros_workspace/install/share/srcp2_heightmap/cmake/: srcp2_heightmapConfig.cmake
srcp2-final-public-main/ros_workspace/install/share/srcp2_heightmap/scripts/: generate_heightmap.py  heightmap_filters.py  lunar_texture.material
srcp2-final-public-main/ros_workspace/install/share/srcp2_launch/: package.xml
srcp2-final-public-main/ros_workspace/install/share/srcp2_launch/cmake/: srcp2_launchConfig.cmake
srcp2-final-public-main/ros_workspace/install/share/srcp2_launch/config/: small_excavator.yaml  small_hauler.yaml  small_scout.yaml
srcp2-final-public-main/ros_workspace/install/share/srcp2_launch/launch/: final.launch  processing_plant.launch  repair_station.launch  spawn_rover.launch  testing.launch  transforms.launch
srcp2-final-public-main/ros_workspace/install/share/srcp2_launch/scripts/: assemble_world.py  team_spawner.bash
srcp2-final-public-main/ros_workspace/install/share/srcp2_msgs/: package.xml
srcp2-final-public-main/ros_workspace/install/share/srcp2_msgs/cmake/: srcp2_msgs-msg-extras.cmake  srcp2_msgs-msg-paths.cmake  srcp2_msgsConfig.cmake
srcp2-final-public-main/ros_workspace/install/share/srcp2_msgs/msg/: BatteryStateMsg.msg  ExcavatorScoopMsg.msg  ScoreMsg.msg  StateMsg.msg  SystemMonitorMsg.msg  VolSensorMsg.msg
srcp2-final-public-main/ros_workspace/install/share/srcp2_msgs/srv/: BrakeRoverSrv.srv  ChargingStationSrv.srv  LocalizationSrv.srv  PidListSrv.srv  PidTuningSrv.srv  SpotLightSrv.srv  StartStopSrv.srv  SystemPowerSaveSrv.srv  ToggleLightSrv.srv
(+345 files in other folders)
