<?xml version="1.0"?>
<package format="2">
  <name>srcp2_gazebo</name>
  <version>0.0.0</version>
  <description>The srcp2_gazebo package</description>

<maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>srcp2_msgs</build_depend>
  <build_depend>srcp2_models_qual</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>srcp2_msgs</build_export_depend>
  <build_export_depend>srcp2_models_qual</build_export_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>srcp2_msgs</exec_depend>
  <exec_depend>srcp2_models_qual</exec_depend>


  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>

